<resources>
    <string name="app_name">MedX</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="skip">Skip</string>
    <string name="consult_a_doctor_on_the_go_using_your_phone">Consult a doctor on the go using your phone</string>
    <string name="find_verified_doctors_with_ease">Find verified                     doctors with ease</string>
    <string name="search_from_100s_of_verified_doctors_to_consult">Search from 100s of verified doctors to consult.</string>
    <string name="terms_of_use_privacy_policy">Terms of use, privacy policy</string>
    <string name="welcome">Welcome to our healthcare app\! These terms of use (the “Terms”) apply to your access and use of our healthcare app, including all related websites, mobile and desktop applications, services, and content provided through the app (collectively, the “App”). By accessing or using the App, you agree to be bound by these Terms. If you do not agree to these Terms, you may not access or use the App. The App is provided for informational purposes only and is not intended to be a substitute for professional medical advice, diagnosis, or treatment. Always seek the advice of your qualified healthcare provider with any questions you may have regarding a medical condition. You are responsible for the accuracy of any information you provide through the App, and you agree that the App will not be liable for any errors or omissions in the information you provide. You agree not to use the App for any purpose that is unlawful or prohibited by these Terms. You agree not to use the App in any way that could damage, disable, overburden, or impair the App or interfere with any other party’s use and enjoyment of the App. You may not modify, copy, distribute, transmit, display, perform, reproduce, publish, license, create derivative works from, transfer, or sell any information, software, products, or services obtained from the App. PRIVACY POLICY We are committed to protecting the privacy of our users. Our Privacy Policy explains how we collect, use, and protect information that you provide through the App. We may collect certain personal information from you when you use the App, such as your name, email address, and other contact information. We will never share this information with third parties. We will use the information we collect to provide you with the services and features available through the App. We may also use your information for internal purposes, such as to improve the App and our services, as well as to analyze and understand how our users use the App. We may also collect certain data from your use of the App, such as usage data and device data. This data will be used to analyze and understand how our users use the App, and to improve the App and our services. We may use third-party services to help us provide the App and our services. These services may collect or receive data from your use of the App, such as usage data and device data. We may disclose your personal information if required to do so by law or if we believe in good faith that such action is necessary to protect and defend the rights or property of the App or its users. We take reasonable steps to protect the security of your information. However, no data transmission over the internet or data storage system can be guaranteed to be 100% secure. As a result, we cannot guarantee the security of any information transmitted to or from the App. By using the App, you understand and agree that you are solely responsible for maintaining the security of your information.</string>
    <string name="i_accept">I accept</string>
    <string name="welcome_to_medx">Welcome to MedX</string>
    <string name="access_quality_healthcare_with_ease_log_in_or_create_an_account_to_get_started">Access quality healthcare with ease. Log in or create an account to get started</string>
    <string name="log_in">Log in</string>
    <string name="create_an_account">Create an account</string>
    <string name="great_job_you_ve_opened_the_door_to_a_nworld_of_fast_affordable_and_quality_n_healthcare">Great job\! You’ve opened the door to a \nworld of fast, affordable and quality \n healthcare.</string>
    <string name="welcome_back">Welcome back\!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create account</string>
    <string name="view">View</string>
    <string name="text">Our mission is to bring everyone the inspiration to create a life they love. To do that, we show you personalized content and ads we think you’ll be interested in based on information we collect from you and third parties. We only use that information where we have a proper legal basis for doing so. We wrote this policy to help you understand what information we collect, how we use it and what choices you have about it. Because we’re an internet company, some of the concepts below are a little technical, but we’ve tried our best to explain things in a simple and clear way. We welcome your questions and comments on this policy. Because we’re an internet company, some of the concepts below are a little technical, but we’ve tried our best to explain things in a simple and clear way. We welcome you. Our mission is to bring everyone the inspiration to create a life they love. To do that, we show you personalized content and ads we think you’ll be interested in based on information we collect from you and third parties. We only use that information where we have a proper legal basis for doing so. We wrote this policy to help you understand what information we collect, how we use it and what choices you have about it. Because we’re an internet company, some of the concepts below are a little technical, but we’ve tried our best to explain things in a simple and clear way. We welcome your questions and comments on this policy. Because we’re an internet company, some of the concepts below are a little technical, but we’ve tried our best to explain things in a simple and clear way. We welcome you.</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="enter_passsword">Enter Passsword</string>
    <string name="update_your_bio_data">Update your bio-data</string>
    <string name="settings">Settings</string>
    <string name="take_a_self_test"><u>Take a self-Test</u></string>
    <string name="card_text">Your ID is under review. You\’ll be notified once the review is done. Meanwhile, take a quick tour of the app and update your profile.</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="update"><u>Update</u></string>
    <string name="happy_to_help_you">Happy to help you \!\!</string>
    <string name="text1">Wondering how some celebrities have such shiny skin and glowy skin you can almos</string>
    <string name="consult_a_doctor">Consult a doctor</string>
    <string name="consult_a_general_practictioner"><u>Consult a general practictioner</u></string>
    <string name="category_not_listed">Category not listed ?</string>
    <string name="complaint_text">Why do you want to consult a doctor?\nAdd a note about your health complaint.</string>
    <string name="describe_your_complaint">Describe your complaint</string>
    <string name="read_more">Read more…</string>
    <string name="view_more">View more</string>
    <string name="select_image">Select Image</string>
    <string name="upload_image">Upload</string>
    <string name="upload_you_documents">Upload you Documents</string>
    <string name="what_do_you_want_to_do_today">What do you want to do today?</string>
    <string name="and_stay_informed">and stay informed .</string>
    <string name="consult_a_n_doctor">Consult a\n doctor</string>
    <string name="view_health_n_tips">View health\n tips</string>
    <string name="health_tips">Health tips</string>
    <string name="how_to_care_for_your_skin">How to care for your skin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="weight">Weight</string>
    <string name="cms">Cms</string>
    <string name="_170">170</string>
    <string name="bmi">BMI</string>
    <string name="height">Height</string>
    <string name="dinner">Dinner</string>
    <string name="menu">Menu</string>
    <string name="midmeal">MidMeal</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="snacks">Snacks</string>
    <string name="submit">submit</string>
    <string name="view_diet_nplan">View Diet\nplan</string>
    <string name="generate_diet">Generate Diet</string>
    <string name="kgs">Kgs</string>
    <string name="take_care_of_your_diet">Take care of your diet</string>
    <string name="tips_for_obesity">Tips for Obesity</string>
    <string name="prevention_from_hairfall">Prevention from Hairfall</string>
    <string name="acne_prevention">Acne Prevention</string>
    <string name="dental_problems">Dental problems</string>
    <string name="maintain_a_good_sleep_cycle">Maintain a good Sleep cycle</string>
    <string name="maintain_diet_for_malnutrition">Maintain Diet for Malnutrition</string>
    <string name="how_to_stay_hydrated">How to Stay Hydrated</string>
    <string name="Skin">Taking care of a teenager\'s skin is important because this is a time when many hormonal changes can lead to various skin issues like acne. Here are some general tips for teenagers to maintain healthy skin:</string>
    <string name="types_skin"><u><b>Cleansing</b></u>: Teach them to wash their face twice a day with a gentle, sulfate-free cleanser. Avoid using harsh soaps or scrubbing too vigorously, as this can irritate the skin.\n<u><b>Hydration</b></u>: Encourage them to drink plenty of water to keep their skin hydrated from within. Proper hydration is essential for healthy skin.\n<u><b>Sun Protection</b></u>: Stress the importance of wearing sunscreen daily, even on cloudy days, to protect their skin from harmful UV rays. Look for a broad-spectrum sunscreen with at least SPF 30.\n<u><b>Balanced Diet</b></u>: A balanced diet rich in fruits, vegetables, and whole grains can contribute to healthier skin. Foods high in antioxidants, like berries and leafy greens, can help combat free radicals.\nRemember that everyone\'s skin is different, and what works for one person may not work for another. It may take some trial and error to find the right skincare routine and products that suit your teenager\'s skin type and specific concerns. Patience and consistency are key when it comes to skincare.</string>
    <string name="obesity">Obesity is a complex condition that results from a combination of genetic, environmental, behavioral, and hormonal factors. Understanding the causes and prevention of obesity is crucial for managing and reducing its prevalence. Here are some key factors and strategies related to the causes and prevention of obesity:</string>
</resources>