<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeBack">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:layout_marginTop="61dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:clickable="true"
        android:focusable="true"
        />
    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:lineHeight="34dp"
        android:fontFamily="@font/ubuntu_medium"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="94dp"
        android:layout_marginHorizontal="115dp"
        />
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log in."
        android:fontFamily="@font/ubuntu_regular"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        android:textSize="16sp"
        android:layout_marginHorizontal="160dp"
        android:textAlignment="center"
        android:lineHeight="16sp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/ubuntu_regular"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="26dp"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <EditText
        android:id="@+id/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_marginTop="8dp"
        />
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:fontFamily="@font/ubuntu_regular"
        android:textSize="16sp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/enter_email"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <EditText
        android:id="@+id/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_passsword"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/group"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enter_password"
        app:layout_constraintRight_toRightOf="@id/enter_password"
        android:text="@string/forgot_password"
        android:fontFamily="@font/ubuntu_regular"
        android:textSize="14sp"
        android:layout_marginTop="13dp"
        />
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"

        android:textAllCaps="false"
        android:background="@drawable/round_box"
        app:layout_constraintTop_toBottomOf="@id/enter_password"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="86dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/vector_5"
        app:layout_constraintTop_toBottomOf="@id/button"
        android:layout_marginTop="161dp"
        app:layout_constraintLeft_toLeftOf="@id/password"
        android:layout_marginStart="35dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/vector_5"
        app:layout_constraintTop_toBottomOf="@id/button"
        android:layout_marginTop="161dp"
        app:layout_constraintLeft_toLeftOf="@id/password"
        android:layout_marginStart="240dp"
        />
    <TextView
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/button"
        android:layout_marginTop="201dp"
        android:fontFamily="@font/ubuntu_medium"
        android:layout_marginStart="85dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="#130092"
        android:fontFamily="@font/ubuntu_medium"
        app:layout_constraintLeft_toRightOf="@id/create"
        app:layout_constraintTop_toTopOf="@id/create"
        android:layout_marginStart="5dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>