<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayBMI">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/bmi"
        android:fontFamily="@font/ubuntu_medium"
        android:textSize="28sp"
        android:layout_marginTop="35dp"
        />

    <ImageView
        android:id="@+id/thin"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"
        android:layout_marginTop="35dp"
        />

    <ImageView
        android:id="@+id/healthy"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"
        android:layout_marginTop="35dp"
        />

    <ImageView
        android:id="@+id/fat"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"
        android:layout_marginTop="35dp"
        />

    <TextView
        android:id="@+id/weightbox"
        android:layout_width="135dp"
        android:layout_height="155dp"
        app:layout_constraintTop_toBottomOf="@id/thin"
        android:layout_marginTop="25dp"
        android:background="@drawable/box_outline"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="45dp"
        />
    <LinearLayout
        android:id="@+id/weightlinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@id/weightbox"
        app:layout_constraintRight_toRightOf="@id/weightbox"
        app:layout_constraintTop_toBottomOf="@id/weighttext"
        android:layout_marginTop="8dp"
        >
        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="65"
            android:textSize="24sp"
            android:layout_weight="2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kgs"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/weighttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        app:layout_constraintTop_toTopOf="@id/weightbox"
        app:layout_constraintLeft_toLeftOf="@id/weightbox"
        app:layout_constraintRight_toRightOf="@id/weightbox"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/heightbox"
        android:layout_width="135dp"
        android:layout_height="155dp"
        app:layout_constraintTop_toBottomOf="@id/thin"
        android:layout_marginTop="25dp"
        android:background="@drawable/box_outline"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="45dp"
        />
    <LinearLayout
        android:id="@+id/heightlinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@id/heightbox"
        app:layout_constraintRight_toRightOf="@id/heightbox"
        app:layout_constraintTop_toBottomOf="@id/heighttext"
        android:layout_marginTop="8dp"
        >
        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_170"
            android:textSize="24sp"
            android:layout_weight="2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cms"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/heighttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        app:layout_constraintTop_toTopOf="@id/heightbox"
        app:layout_constraintLeft_toLeftOf="@id/heightbox"
        app:layout_constraintRight_toRightOf="@id/heightbox"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/weightbox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        android:text="@string/calculate_bmi"
        android:textAllCaps="false"
        android:background="@drawable/round_box"
        />
        <TextView
            app:layout_constraintTop_toBottomOf="@id/generate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_170"
            android:textSize="24sp"
            android:layout_weight="2"
            android:layout_marginTop="75dp"
            android:visibility="invisible"
            />

    <Button
        android:id="@+id/diet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/generate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="145dp"
        android:text="@string/generate_diet"
        android:textAllCaps="false"
        android:background="@drawable/round_box"
        />




</androidx.constraintlayout.widget.ConstraintLayout>