<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DietPlan">


    <TextView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="32sp"
        android:textAlignment="center"
        android:paddingVertical="15dp"
        android:paddingHorizontal="37dp"
        android:background="@drawable/round_box"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="37dp"
        android:layout_marginTop="94dp"
        />
    <TextView
        android:id="@+id/breakfasttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breakfast"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu"
        android:layout_marginStart="17dp"
        android:layout_marginTop="47dp"
        />
    <TextView
        android:id="@+id/MidMealtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/midmeal"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/breakfasttext"
        android:layout_marginStart="17dp"
        android:layout_marginTop="54dp"
        />
    <TextView
        android:id="@+id/lunchtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lunch"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MidMealtext"
        android:layout_marginStart="17dp"
        android:layout_marginTop="54dp"
        />
    <TextView
        android:id="@+id/snacktext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snacks"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lunchtext"
        android:layout_marginStart="17dp"
        android:layout_marginTop="54dp"
        />
    <TextView
        android:id="@+id/dinnertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/snacktext"
        android:layout_marginStart="17dp"
        android:layout_marginTop="54dp"
        />
    <TextView
        android:id="@+id/breakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/breakfasttext"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="17dp"
        />
    <TextView
        android:id="@+id/midmeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/MidMealtext"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="17dp"
        />
    <TextView
        android:id="@+id/lunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lunchtext"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="17dp"
        />
    <TextView
        android:id="@+id/snack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/snacktext"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="17dp"
        />
    <TextView
        android:id="@+id/dinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dinnertext"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="17dp"
        />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/avacado"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="visible"
        />


</androidx.constraintlayout.widget.ConstraintLayout>