<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartingPage">

    <ImageView
        android:id="@+id/docimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/docsymbol"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="177dp"
        />
    <TextView
        android:id="@+id/welcometext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_medx"
        android:textSize="24sp"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/docimage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="43dp"
        />
    <TextView
        android:id="@+id/welcomecontent"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:text="@string/access_quality_healthcare_with_ease_log_in_or_create_an_account_to_get_started"
        app:layout_constraintTop_toBottomOf="@id/welcometext"
        android:fontFamily="@font/ubuntu_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="23dp"
        android:textSize="18sp"
        android:layout_margin="40dp"
        android:textAlignment="center"
        android:textColor="#080136"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/welcomecontent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:cornerRadius="1000dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="112dp"
        android:paddingHorizontal="137dp"
        android:paddingVertical="15dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:cornerRadius="1000dp"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="88dp"
        android:paddingVertical="15dp"
        android:backgroundTint="@color/white"
        android:textColor="#0139B4"
        />


</androidx.constraintlayout.widget.ConstraintLayout>