<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intro2">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/skip"
        android:fontFamily="@font/ubuntu_bold"
        android:textAllCaps="false"
        android:textColor="#212121"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="29dp"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/intropic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/intro2"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@id/button"
        />
    <TextView
        android:id="@+id/id1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_verified_doctors_with_ease"
        android:lines="2"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="54dp"
        android:fontFamily="@font/ubuntu_bold"
        android:layout_marginStart="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intropic"
        android:layout_marginEnd="115dp"
        />
    <TextView
        android:id="@+id/id2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_from_100s_of_verified_doctors_to_consult"
        app:layout_constraintTop_toBottomOf="@id/id1"
        android:textSize="18sp"
        android:fontFamily="@font/ubuntu_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="14dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:lines="2"
        />

</androidx.constraintlayout.widget.ConstraintLayout>